# luminabridge

./: .dockerignore  .env.example  .gitignore  .rustfmt.toml  API_KEY_AUTH_GUIDE.md  AUTH_IMPLEMENTATION.md  AUTH_IMPLEMENTATION_REPORT.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_ISSUES.md  DEV_STATUS.md  DOCKER_SETUP_REPORT.md  Dockerfile  FIX_NOTES.md  FIX_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_COMPLETION_REPORT.md  INTEGRATION_TEST_REPORT.md  MIGRATION_GUIDE.md  Makefile  P1_FIX_REPORT.md  QA_REPORT.md  QUICK_START_ZH.md  README.md  RELAY_API_SUMMARY.md  RELAY_API_TODO.md  RELAY_IMPLEMENTATION_REPORT.md  SECURITY.md  SUPPORT.md  apply_fixes.ps1  clippy.toml  docker-compose.yml  fix_all.ps1
.github/workflows/: ci.yml
benches/: benchmarks.rs
docker/: .env.example  README.md  start.sh
docs/: API_ROADMAP.md  FRONTEND_DESIGN.md  RELAY_QUICKSTART.md
luminabridge-web/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
luminabridge-web/src/: App.jsx  index.css
migrations/: 001_initial_schema.sql
mock-server/: package-lock.json  package.json  server.js  test-ws.js
scripts/: code-audit.ps1  code-audit.sh  pre-commit
scripts/benchmarks/: api-benchmark.ps1  api-benchmark.sh
src/: error.rs  lib.rs  main.rs  types.rs
src/alerts/: discord.rs  email.rs  mod.rs  webhook.rs
src/auth/: mod.rs
src/auth/oauth/: discord.rs  github.rs  mod.rs  provider.rs
src/config/: mod.rs
src/db/: mod.rs  models.rs
src/middleware/: api_key_auth.rs  auth.rs  mod.rs  rate_limit.rs
src/relay/: mod.rs  pricing.rs  retry.rs  stream.rs  types.rs
src/routes/: auth.rs  channels.rs  mod.rs  relay.rs  stats.rs  tenant.rs  tokens.rs  users.rs  ws.rs
src/server/: mod.rs
tests/: channels_tests.rs  relay_tests.rs  tokens_tests.rs  users_tests.rs
