[package]
name = "luminabridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["LuminaBridge Team <team@luminabridge.io>"]
description = "🌉 Illuminating AI Connections - Next-generation high-performance AI gateway built with Rust"
license = "Apache-2.0"
homepage = "https://luminabridge.github.io"
repository = "https://github.com/LuminaBridge/luminabridge"
keywords = ["ai", "gateway", "llm", "api", "rust"]
categories = ["web-programming", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate"] }

# Authentication & Security
oauth2 = "4.4"
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "gzip"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Metrics & Monitoring
prometheus = "0.13"

# Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Utilities
once_cell = "1.19"
lazy_static = "1.4"
regex = "1.10"
urlencoding = "2.1"

# Decimal support
rust_decimal = { version = "1.33", features = ["serde"] }

# Async trait macro
async-trait = "0.1"

# Random number generation (for load balancing)
rand = "0.8"

# Futures utilities
futures-util = "0.3"

# Stream utilities
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
fake = { version = "2.9", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }

# For integration tests
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }

[[bin]]
name = "luminabridge"
path = "src/main.rs"

[lib]
name = "luminabridge"
path = "src/lib.rs"

# Profile configurations
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"

# Benchmark configuration
[[bench]]
name = "benchmarks"
harness = false

# Feature flags
[features]
default = ["full"]
full = ["oauth", "database", "cache"]
oauth = []
database = []
cache = []
# For minimal builds
minimal = []
